T2-Joao-Osmar-Mauricio/c-v1.1.output
Terminais sem uso na gramática

   ELSE


Estado 118 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | declaration

    4 declaration: varDeclaration
    5            | constDeclaration
    6            | funDeclaration

    7 varDeclaration: typeSpecifier ID SEMICOLON
    8               | typeSpecifier ID OBRACKETS NUM CBRACKETS SEMICOLON

    9 typeSpecifier: KEYINT
   10              | KEYVOID

   11 constDeclaration: KEYCONST typeSpecifier ID EQUAL simpleExpression SEMICOLON

   12 funDeclaration: typeSpecifier ID OPARENT params CPARENT compoundStmt

   13 params: paramList
   14       | KEYVOID

   15 paramList: paramList COLON param
   16          | param

   17 param: typeSpecifier ID
   18      | typeSpecifier ID OBRACKETS CBRACKETS

   19 compoundStmt: OKEY localDeclarations statementList CKEY
   20             | OKEY localDeclarations CKEY
   21             | OKEY statementList CKEY
   22             | OKEY CKEY

   23 localDeclarations: localDeclarations varDeclaration
   24                  | varDeclaration

   25 statementList: statementList statement
   26              | statement

   27 statement: expressionStmt
   28          | compoundStmt
   29          | selectionStmt
   30          | iterationStmt
   31          | returnStmt
   32          | forStmt

   33 expressionStmt: expression SEMICOLON
   34               | SEMICOLON

   35 selectionStmt: KEYIF OPARENT expression CPARENT statement
   36              | KEYIF OPARENT expression CPARENT statement KEYELSE statement

   37 iterationStmt: KEYWHILE OPARENT expression CPARENT statement

   38 forStmt: KEYFOR OPARENT expression SEMICOLON expression SEMICOLON expression CPARENT statement
   39        | KEYFOR OPARENT typeSpecifier expression SEMICOLON expression SEMICOLON expression CPARENT statement

   40 returnStmt: KEYRETURN SEMICOLON
   41           | KEYRETURN expression SEMICOLON

   42 expression: var EQUAL expression
   43           | simpleExpression

   44 var: ID
   45    | ID OBRACKETS expression CBRACKETS

   46 simpleExpression: additiveExpression relop additiveExpression
   47                 | additiveExpression

   48 relop: LESSEQUAL
   49      | LESSTHAN
   50      | GREATERTHAN
   51      | GREATEREQUAL
   52      | EQUALEQUAL
   53      | NOTEQUAL

   54 additiveExpression: additiveExpression addop term
   55                   | term

   56 addop: PLUS
   57      | MINUS

   58 term: term mulop factor
   59     | factor

   60 mulop: MULT
   61      | DIVISION

   62 factor: OPARENT expression CPARENT
   63       | var
   64       | call
   65       | NUM

   66 call: ID OPARENT args CPARENT

   67 args: argList
   68     | %empty

   69 argList: argList COLON expression
   70        | expression


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
KEYELSE (258) 36
KEYIF (259) 35 36
KEYINT (260) 9
KEYRETURN (261) 40 41
KEYVOID (262) 10 14
KEYWHILE (263) 37
KEYCONST (264) 11
KEYFOR (265) 38 39
ID (266) 7 8 11 12 17 18 44 45 66
NUM (267) 8 65
PLUS (268) 56
MINUS (269) 57
DIVISION (270) 61
MULT (271) 60
SEMICOLON (272) 7 8 11 33 34 38 39 40 41
OPARENT (273) 12 35 36 37 38 39 62 66
CPARENT (274) 12 35 36 37 38 39 62 66
EQUAL (275) 11 42
OKEY (276) 19 20 21 22
CKEY (277) 19 20 21 22
LESSTHAN (278) 49
LESSEQUAL (279) 48
GREATERTHAN (280) 50
GREATEREQUAL (281) 51
EQUALEQUAL (282) 52
COLON (283) 15 69
OBRACKETS (284) 8 18 45
CBRACKETS (285) 8 18 45
NOTEQUAL (286) 53
THEN (287)
ELSE (288)


Não terminais com as regras onde eles aparecem

$accept (34)
    à esquerda: 0
program (35)
    à esquerda: 1, à direita: 0
declarationList (36)
    à esquerda: 2 3, à direita: 1 2
declaration (37)
    à esquerda: 4 5 6, à direita: 2 3
varDeclaration (38)
    à esquerda: 7 8, à direita: 4 23 24
typeSpecifier (39)
    à esquerda: 9 10, à direita: 7 8 11 12 17 18 39
constDeclaration (40)
    à esquerda: 11, à direita: 5
funDeclaration (41)
    à esquerda: 12, à direita: 6
params (42)
    à esquerda: 13 14, à direita: 12
paramList (43)
    à esquerda: 15 16, à direita: 13 15
param (44)
    à esquerda: 17 18, à direita: 15 16
compoundStmt (45)
    à esquerda: 19 20 21 22, à direita: 12 28
localDeclarations (46)
    à esquerda: 23 24, à direita: 19 20 23
statementList (47)
    à esquerda: 25 26, à direita: 19 21 25
statement (48)
    à esquerda: 27 28 29 30 31 32, à direita: 25 26 35 36 37 38 39
expressionStmt (49)
    à esquerda: 33 34, à direita: 27
selectionStmt (50)
    à esquerda: 35 36, à direita: 29
iterationStmt (51)
    à esquerda: 37, à direita: 30
forStmt (52)
    à esquerda: 38 39, à direita: 32
returnStmt (53)
    à esquerda: 40 41, à direita: 31
expression (54)
    à esquerda: 42 43, à direita: 33 35 36 37 38 39 41 42 45 62 69
    70
var (55)
    à esquerda: 44 45, à direita: 42 63
simpleExpression (56)
    à esquerda: 46 47, à direita: 11 43
relop (57)
    à esquerda: 48 49 50 51 52 53, à direita: 46
additiveExpression (58)
    à esquerda: 54 55, à direita: 46 47 54
addop (59)
    à esquerda: 56 57, à direita: 54
term (60)
    à esquerda: 58 59, à direita: 54 55 58
mulop (61)
    à esquerda: 60 61, à direita: 58
factor (62)
    à esquerda: 62 63 64 65, à direita: 58 59
call (63)
    à esquerda: 66, à direita: 64
args (64)
    à esquerda: 67 68, à direita: 66
argList (65)
    à esquerda: 69 70, à direita: 67 69


Estado 0

    0 $accept: . program $end

    KEYINT    deslocar, e ir ao estado 1
    KEYVOID   deslocar, e ir ao estado 2
    KEYCONST  deslocar, e ir ao estado 3

    program           ir ao estado 4
    declarationList   ir ao estado 5
    declaration       ir ao estado 6
    varDeclaration    ir ao estado 7
    typeSpecifier     ir ao estado 8
    constDeclaration  ir ao estado 9
    funDeclaration    ir ao estado 10


Estado 1

    9 typeSpecifier: KEYINT .

    $padrão  reduzir usando a regra 9 (typeSpecifier)


Estado 2

   10 typeSpecifier: KEYVOID .

    $padrão  reduzir usando a regra 10 (typeSpecifier)


Estado 3

   11 constDeclaration: KEYCONST . typeSpecifier ID EQUAL simpleExpression SEMICOLON

    KEYINT   deslocar, e ir ao estado 1
    KEYVOID  deslocar, e ir ao estado 2

    typeSpecifier  ir ao estado 11


Estado 4

    0 $accept: program . $end

    $end  deslocar, e ir ao estado 12


Estado 5

    1 program: declarationList .
    2 declarationList: declarationList . declaration

    KEYINT    deslocar, e ir ao estado 1
    KEYVOID   deslocar, e ir ao estado 2
    KEYCONST  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 1 (program)

    declaration       ir ao estado 13
    varDeclaration    ir ao estado 7
    typeSpecifier     ir ao estado 8
    constDeclaration  ir ao estado 9
    funDeclaration    ir ao estado 10


Estado 6

    3 declarationList: declaration .

    $padrão  reduzir usando a regra 3 (declarationList)


Estado 7

    4 declaration: varDeclaration .

    $padrão  reduzir usando a regra 4 (declaration)


Estado 8

    7 varDeclaration: typeSpecifier . ID SEMICOLON
    8               | typeSpecifier . ID OBRACKETS NUM CBRACKETS SEMICOLON
   12 funDeclaration: typeSpecifier . ID OPARENT params CPARENT compoundStmt

    ID  deslocar, e ir ao estado 14


Estado 9

    5 declaration: constDeclaration .

    $padrão  reduzir usando a regra 5 (declaration)


Estado 10

    6 declaration: funDeclaration .

    $padrão  reduzir usando a regra 6 (declaration)


Estado 11

   11 constDeclaration: KEYCONST typeSpecifier . ID EQUAL simpleExpression SEMICOLON

    ID  deslocar, e ir ao estado 15


Estado 12

    0 $accept: program $end .

    $padrão  aceitar


Estado 13

    2 declarationList: declarationList declaration .

    $padrão  reduzir usando a regra 2 (declarationList)


Estado 14

    7 varDeclaration: typeSpecifier ID . SEMICOLON
    8               | typeSpecifier ID . OBRACKETS NUM CBRACKETS SEMICOLON
   12 funDeclaration: typeSpecifier ID . OPARENT params CPARENT compoundStmt

    SEMICOLON  deslocar, e ir ao estado 16
    OPARENT    deslocar, e ir ao estado 17
    OBRACKETS  deslocar, e ir ao estado 18


Estado 15

   11 constDeclaration: KEYCONST typeSpecifier ID . EQUAL simpleExpression SEMICOLON

    EQUAL  deslocar, e ir ao estado 19


Estado 16

    7 varDeclaration: typeSpecifier ID SEMICOLON .

    $padrão  reduzir usando a regra 7 (varDeclaration)


Estado 17

   12 funDeclaration: typeSpecifier ID OPARENT . params CPARENT compoundStmt

    KEYINT   deslocar, e ir ao estado 1
    KEYVOID  deslocar, e ir ao estado 20

    typeSpecifier  ir ao estado 21
    params         ir ao estado 22
    paramList      ir ao estado 23
    param          ir ao estado 24


Estado 18

    8 varDeclaration: typeSpecifier ID OBRACKETS . NUM CBRACKETS SEMICOLON

    NUM  deslocar, e ir ao estado 25


Estado 19

   11 constDeclaration: KEYCONST typeSpecifier ID EQUAL . simpleExpression SEMICOLON

    ID       deslocar, e ir ao estado 26
    NUM      deslocar, e ir ao estado 27
    OPARENT  deslocar, e ir ao estado 28

    var                 ir ao estado 29
    simpleExpression    ir ao estado 30
    additiveExpression  ir ao estado 31
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34


Estado 20

   10 typeSpecifier: KEYVOID .
   14 params: KEYVOID .

    CPARENT   reduzir usando a regra 14 (params)
    $padrão  reduzir usando a regra 10 (typeSpecifier)


Estado 21

   17 param: typeSpecifier . ID
   18      | typeSpecifier . ID OBRACKETS CBRACKETS

    ID  deslocar, e ir ao estado 35


Estado 22

   12 funDeclaration: typeSpecifier ID OPARENT params . CPARENT compoundStmt

    CPARENT  deslocar, e ir ao estado 36


Estado 23

   13 params: paramList .
   15 paramList: paramList . COLON param

    COLON  deslocar, e ir ao estado 37

    $padrão  reduzir usando a regra 13 (params)


Estado 24

   16 paramList: param .

    $padrão  reduzir usando a regra 16 (paramList)


Estado 25

    8 varDeclaration: typeSpecifier ID OBRACKETS NUM . CBRACKETS SEMICOLON

    CBRACKETS  deslocar, e ir ao estado 38


Estado 26

   44 var: ID .
   45    | ID . OBRACKETS expression CBRACKETS
   66 call: ID . OPARENT args CPARENT

    OPARENT    deslocar, e ir ao estado 39
    OBRACKETS  deslocar, e ir ao estado 40

    $padrão  reduzir usando a regra 44 (var)


Estado 27

   65 factor: NUM .

    $padrão  reduzir usando a regra 65 (factor)


Estado 28

   62 factor: OPARENT . expression CPARENT

    ID       deslocar, e ir ao estado 26
    NUM      deslocar, e ir ao estado 27
    OPARENT  deslocar, e ir ao estado 28

    expression          ir ao estado 41
    var                 ir ao estado 42
    simpleExpression    ir ao estado 43
    additiveExpression  ir ao estado 31
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34


Estado 29

   63 factor: var .

    $padrão  reduzir usando a regra 63 (factor)


Estado 30

   11 constDeclaration: KEYCONST typeSpecifier ID EQUAL simpleExpression . SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 44


Estado 31

   46 simpleExpression: additiveExpression . relop additiveExpression
   47                 | additiveExpression .
   54 additiveExpression: additiveExpression . addop term

    PLUS          deslocar, e ir ao estado 45
    MINUS         deslocar, e ir ao estado 46
    LESSTHAN      deslocar, e ir ao estado 47
    LESSEQUAL     deslocar, e ir ao estado 48
    GREATERTHAN   deslocar, e ir ao estado 49
    GREATEREQUAL  deslocar, e ir ao estado 50
    EQUALEQUAL    deslocar, e ir ao estado 51
    NOTEQUAL      deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 47 (simpleExpression)

    relop  ir ao estado 53
    addop  ir ao estado 54


Estado 32

   55 additiveExpression: term .
   58 term: term . mulop factor

    DIVISION  deslocar, e ir ao estado 55
    MULT      deslocar, e ir ao estado 56

    $padrão  reduzir usando a regra 55 (additiveExpression)

    mulop  ir ao estado 57


Estado 33

   59 term: factor .

    $padrão  reduzir usando a regra 59 (term)


Estado 34

   64 factor: call .

    $padrão  reduzir usando a regra 64 (factor)


Estado 35

   17 param: typeSpecifier ID .
   18      | typeSpecifier ID . OBRACKETS CBRACKETS

    OBRACKETS  deslocar, e ir ao estado 58

    $padrão  reduzir usando a regra 17 (param)


Estado 36

   12 funDeclaration: typeSpecifier ID OPARENT params CPARENT . compoundStmt

    OKEY  deslocar, e ir ao estado 59

    compoundStmt  ir ao estado 60


Estado 37

   15 paramList: paramList COLON . param

    KEYINT   deslocar, e ir ao estado 1
    KEYVOID  deslocar, e ir ao estado 2

    typeSpecifier  ir ao estado 21
    param          ir ao estado 61


Estado 38

    8 varDeclaration: typeSpecifier ID OBRACKETS NUM CBRACKETS . SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 62


Estado 39

   66 call: ID OPARENT . args CPARENT

    ID       deslocar, e ir ao estado 26
    NUM      deslocar, e ir ao estado 27
    OPARENT  deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 68 (args)

    expression          ir ao estado 63
    var                 ir ao estado 42
    simpleExpression    ir ao estado 43
    additiveExpression  ir ao estado 31
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34
    args                ir ao estado 64
    argList             ir ao estado 65


Estado 40

   45 var: ID OBRACKETS . expression CBRACKETS

    ID       deslocar, e ir ao estado 26
    NUM      deslocar, e ir ao estado 27
    OPARENT  deslocar, e ir ao estado 28

    expression          ir ao estado 66
    var                 ir ao estado 42
    simpleExpression    ir ao estado 43
    additiveExpression  ir ao estado 31
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34


Estado 41

   62 factor: OPARENT expression . CPARENT

    CPARENT  deslocar, e ir ao estado 67


Estado 42

   42 expression: var . EQUAL expression
   63 factor: var .

    EQUAL  deslocar, e ir ao estado 68

    $padrão  reduzir usando a regra 63 (factor)


Estado 43

   43 expression: simpleExpression .

    $padrão  reduzir usando a regra 43 (expression)


Estado 44

   11 constDeclaration: KEYCONST typeSpecifier ID EQUAL simpleExpression SEMICOLON .

    $padrão  reduzir usando a regra 11 (constDeclaration)


Estado 45

   56 addop: PLUS .

    $padrão  reduzir usando a regra 56 (addop)


Estado 46

   57 addop: MINUS .

    $padrão  reduzir usando a regra 57 (addop)


Estado 47

   49 relop: LESSTHAN .

    $padrão  reduzir usando a regra 49 (relop)


Estado 48

   48 relop: LESSEQUAL .

    $padrão  reduzir usando a regra 48 (relop)


Estado 49

   50 relop: GREATERTHAN .

    $padrão  reduzir usando a regra 50 (relop)


Estado 50

   51 relop: GREATEREQUAL .

    $padrão  reduzir usando a regra 51 (relop)


Estado 51

   52 relop: EQUALEQUAL .

    $padrão  reduzir usando a regra 52 (relop)


Estado 52

   53 relop: NOTEQUAL .

    $padrão  reduzir usando a regra 53 (relop)


Estado 53

   46 simpleExpression: additiveExpression relop . additiveExpression

    ID       deslocar, e ir ao estado 26
    NUM      deslocar, e ir ao estado 27
    OPARENT  deslocar, e ir ao estado 28

    var                 ir ao estado 29
    additiveExpression  ir ao estado 69
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34


Estado 54

   54 additiveExpression: additiveExpression addop . term

    ID       deslocar, e ir ao estado 26
    NUM      deslocar, e ir ao estado 27
    OPARENT  deslocar, e ir ao estado 28

    var     ir ao estado 29
    term    ir ao estado 70
    factor  ir ao estado 33
    call    ir ao estado 34


Estado 55

   61 mulop: DIVISION .

    $padrão  reduzir usando a regra 61 (mulop)


Estado 56

   60 mulop: MULT .

    $padrão  reduzir usando a regra 60 (mulop)


Estado 57

   58 term: term mulop . factor

    ID       deslocar, e ir ao estado 26
    NUM      deslocar, e ir ao estado 27
    OPARENT  deslocar, e ir ao estado 28

    var     ir ao estado 29
    factor  ir ao estado 71
    call    ir ao estado 34


Estado 58

   18 param: typeSpecifier ID OBRACKETS . CBRACKETS

    CBRACKETS  deslocar, e ir ao estado 72


Estado 59

   19 compoundStmt: OKEY . localDeclarations statementList CKEY
   20             | OKEY . localDeclarations CKEY
   21             | OKEY . statementList CKEY
   22             | OKEY . CKEY

    KEYIF      deslocar, e ir ao estado 73
    KEYINT     deslocar, e ir ao estado 1
    KEYRETURN  deslocar, e ir ao estado 74
    KEYVOID    deslocar, e ir ao estado 2
    KEYWHILE   deslocar, e ir ao estado 75
    KEYFOR     deslocar, e ir ao estado 76
    ID         deslocar, e ir ao estado 26
    NUM        deslocar, e ir ao estado 27
    SEMICOLON  deslocar, e ir ao estado 77
    OPARENT    deslocar, e ir ao estado 28
    OKEY       deslocar, e ir ao estado 59
    CKEY       deslocar, e ir ao estado 78

    varDeclaration      ir ao estado 79
    typeSpecifier       ir ao estado 80
    compoundStmt        ir ao estado 81
    localDeclarations   ir ao estado 82
    statementList       ir ao estado 83
    statement           ir ao estado 84
    expressionStmt      ir ao estado 85
    selectionStmt       ir ao estado 86
    iterationStmt       ir ao estado 87
    forStmt             ir ao estado 88
    returnStmt          ir ao estado 89
    expression          ir ao estado 90
    var                 ir ao estado 42
    simpleExpression    ir ao estado 43
    additiveExpression  ir ao estado 31
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34


Estado 60

   12 funDeclaration: typeSpecifier ID OPARENT params CPARENT compoundStmt .

    $padrão  reduzir usando a regra 12 (funDeclaration)


Estado 61

   15 paramList: paramList COLON param .

    $padrão  reduzir usando a regra 15 (paramList)


Estado 62

    8 varDeclaration: typeSpecifier ID OBRACKETS NUM CBRACKETS SEMICOLON .

    $padrão  reduzir usando a regra 8 (varDeclaration)


Estado 63

   70 argList: expression .

    $padrão  reduzir usando a regra 70 (argList)


Estado 64

   66 call: ID OPARENT args . CPARENT

    CPARENT  deslocar, e ir ao estado 91


Estado 65

   67 args: argList .
   69 argList: argList . COLON expression

    COLON  deslocar, e ir ao estado 92

    $padrão  reduzir usando a regra 67 (args)


Estado 66

   45 var: ID OBRACKETS expression . CBRACKETS

    CBRACKETS  deslocar, e ir ao estado 93


Estado 67

   62 factor: OPARENT expression CPARENT .

    $padrão  reduzir usando a regra 62 (factor)


Estado 68

   42 expression: var EQUAL . expression

    ID       deslocar, e ir ao estado 26
    NUM      deslocar, e ir ao estado 27
    OPARENT  deslocar, e ir ao estado 28

    expression          ir ao estado 94
    var                 ir ao estado 42
    simpleExpression    ir ao estado 43
    additiveExpression  ir ao estado 31
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34


Estado 69

   46 simpleExpression: additiveExpression relop additiveExpression .
   54 additiveExpression: additiveExpression . addop term

    PLUS   deslocar, e ir ao estado 45
    MINUS  deslocar, e ir ao estado 46

    $padrão  reduzir usando a regra 46 (simpleExpression)

    addop  ir ao estado 54


Estado 70

   54 additiveExpression: additiveExpression addop term .
   58 term: term . mulop factor

    DIVISION  deslocar, e ir ao estado 55
    MULT      deslocar, e ir ao estado 56

    $padrão  reduzir usando a regra 54 (additiveExpression)

    mulop  ir ao estado 57


Estado 71

   58 term: term mulop factor .

    $padrão  reduzir usando a regra 58 (term)


Estado 72

   18 param: typeSpecifier ID OBRACKETS CBRACKETS .

    $padrão  reduzir usando a regra 18 (param)


Estado 73

   35 selectionStmt: KEYIF . OPARENT expression CPARENT statement
   36              | KEYIF . OPARENT expression CPARENT statement KEYELSE statement

    OPARENT  deslocar, e ir ao estado 95


Estado 74

   40 returnStmt: KEYRETURN . SEMICOLON
   41           | KEYRETURN . expression SEMICOLON

    ID         deslocar, e ir ao estado 26
    NUM        deslocar, e ir ao estado 27
    SEMICOLON  deslocar, e ir ao estado 96
    OPARENT    deslocar, e ir ao estado 28

    expression          ir ao estado 97
    var                 ir ao estado 42
    simpleExpression    ir ao estado 43
    additiveExpression  ir ao estado 31
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34


Estado 75

   37 iterationStmt: KEYWHILE . OPARENT expression CPARENT statement

    OPARENT  deslocar, e ir ao estado 98


Estado 76

   38 forStmt: KEYFOR . OPARENT expression SEMICOLON expression SEMICOLON expression CPARENT statement
   39        | KEYFOR . OPARENT typeSpecifier expression SEMICOLON expression SEMICOLON expression CPARENT statement

    OPARENT  deslocar, e ir ao estado 99


Estado 77

   34 expressionStmt: SEMICOLON .

    $padrão  reduzir usando a regra 34 (expressionStmt)


Estado 78

   22 compoundStmt: OKEY CKEY .

    $padrão  reduzir usando a regra 22 (compoundStmt)


Estado 79

   24 localDeclarations: varDeclaration .

    $padrão  reduzir usando a regra 24 (localDeclarations)


Estado 80

    7 varDeclaration: typeSpecifier . ID SEMICOLON
    8               | typeSpecifier . ID OBRACKETS NUM CBRACKETS SEMICOLON

    ID  deslocar, e ir ao estado 100


Estado 81

   28 statement: compoundStmt .

    $padrão  reduzir usando a regra 28 (statement)


Estado 82

   19 compoundStmt: OKEY localDeclarations . statementList CKEY
   20             | OKEY localDeclarations . CKEY
   23 localDeclarations: localDeclarations . varDeclaration

    KEYIF      deslocar, e ir ao estado 73
    KEYINT     deslocar, e ir ao estado 1
    KEYRETURN  deslocar, e ir ao estado 74
    KEYVOID    deslocar, e ir ao estado 2
    KEYWHILE   deslocar, e ir ao estado 75
    KEYFOR     deslocar, e ir ao estado 76
    ID         deslocar, e ir ao estado 26
    NUM        deslocar, e ir ao estado 27
    SEMICOLON  deslocar, e ir ao estado 77
    OPARENT    deslocar, e ir ao estado 28
    OKEY       deslocar, e ir ao estado 59
    CKEY       deslocar, e ir ao estado 101

    varDeclaration      ir ao estado 102
    typeSpecifier       ir ao estado 80
    compoundStmt        ir ao estado 81
    statementList       ir ao estado 103
    statement           ir ao estado 84
    expressionStmt      ir ao estado 85
    selectionStmt       ir ao estado 86
    iterationStmt       ir ao estado 87
    forStmt             ir ao estado 88
    returnStmt          ir ao estado 89
    expression          ir ao estado 90
    var                 ir ao estado 42
    simpleExpression    ir ao estado 43
    additiveExpression  ir ao estado 31
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34


Estado 83

   21 compoundStmt: OKEY statementList . CKEY
   25 statementList: statementList . statement

    KEYIF      deslocar, e ir ao estado 73
    KEYRETURN  deslocar, e ir ao estado 74
    KEYWHILE   deslocar, e ir ao estado 75
    KEYFOR     deslocar, e ir ao estado 76
    ID         deslocar, e ir ao estado 26
    NUM        deslocar, e ir ao estado 27
    SEMICOLON  deslocar, e ir ao estado 77
    OPARENT    deslocar, e ir ao estado 28
    OKEY       deslocar, e ir ao estado 59
    CKEY       deslocar, e ir ao estado 104

    compoundStmt        ir ao estado 81
    statement           ir ao estado 105
    expressionStmt      ir ao estado 85
    selectionStmt       ir ao estado 86
    iterationStmt       ir ao estado 87
    forStmt             ir ao estado 88
    returnStmt          ir ao estado 89
    expression          ir ao estado 90
    var                 ir ao estado 42
    simpleExpression    ir ao estado 43
    additiveExpression  ir ao estado 31
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34


Estado 84

   26 statementList: statement .

    $padrão  reduzir usando a regra 26 (statementList)


Estado 85

   27 statement: expressionStmt .

    $padrão  reduzir usando a regra 27 (statement)


Estado 86

   29 statement: selectionStmt .

    $padrão  reduzir usando a regra 29 (statement)


Estado 87

   30 statement: iterationStmt .

    $padrão  reduzir usando a regra 30 (statement)


Estado 88

   32 statement: forStmt .

    $padrão  reduzir usando a regra 32 (statement)


Estado 89

   31 statement: returnStmt .

    $padrão  reduzir usando a regra 31 (statement)


Estado 90

   33 expressionStmt: expression . SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 106


Estado 91

   66 call: ID OPARENT args CPARENT .

    $padrão  reduzir usando a regra 66 (call)


Estado 92

   69 argList: argList COLON . expression

    ID       deslocar, e ir ao estado 26
    NUM      deslocar, e ir ao estado 27
    OPARENT  deslocar, e ir ao estado 28

    expression          ir ao estado 107
    var                 ir ao estado 42
    simpleExpression    ir ao estado 43
    additiveExpression  ir ao estado 31
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34


Estado 93

   45 var: ID OBRACKETS expression CBRACKETS .

    $padrão  reduzir usando a regra 45 (var)


Estado 94

   42 expression: var EQUAL expression .

    $padrão  reduzir usando a regra 42 (expression)


Estado 95

   35 selectionStmt: KEYIF OPARENT . expression CPARENT statement
   36              | KEYIF OPARENT . expression CPARENT statement KEYELSE statement

    ID       deslocar, e ir ao estado 26
    NUM      deslocar, e ir ao estado 27
    OPARENT  deslocar, e ir ao estado 28

    expression          ir ao estado 108
    var                 ir ao estado 42
    simpleExpression    ir ao estado 43
    additiveExpression  ir ao estado 31
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34


Estado 96

   40 returnStmt: KEYRETURN SEMICOLON .

    $padrão  reduzir usando a regra 40 (returnStmt)


Estado 97

   41 returnStmt: KEYRETURN expression . SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 109


Estado 98

   37 iterationStmt: KEYWHILE OPARENT . expression CPARENT statement

    ID       deslocar, e ir ao estado 26
    NUM      deslocar, e ir ao estado 27
    OPARENT  deslocar, e ir ao estado 28

    expression          ir ao estado 110
    var                 ir ao estado 42
    simpleExpression    ir ao estado 43
    additiveExpression  ir ao estado 31
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34


Estado 99

   38 forStmt: KEYFOR OPARENT . expression SEMICOLON expression SEMICOLON expression CPARENT statement
   39        | KEYFOR OPARENT . typeSpecifier expression SEMICOLON expression SEMICOLON expression CPARENT statement

    KEYINT   deslocar, e ir ao estado 1
    KEYVOID  deslocar, e ir ao estado 2
    ID       deslocar, e ir ao estado 26
    NUM      deslocar, e ir ao estado 27
    OPARENT  deslocar, e ir ao estado 28

    typeSpecifier       ir ao estado 111
    expression          ir ao estado 112
    var                 ir ao estado 42
    simpleExpression    ir ao estado 43
    additiveExpression  ir ao estado 31
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34


Estado 100

    7 varDeclaration: typeSpecifier ID . SEMICOLON
    8               | typeSpecifier ID . OBRACKETS NUM CBRACKETS SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 16
    OBRACKETS  deslocar, e ir ao estado 18


Estado 101

   20 compoundStmt: OKEY localDeclarations CKEY .

    $padrão  reduzir usando a regra 20 (compoundStmt)


Estado 102

   23 localDeclarations: localDeclarations varDeclaration .

    $padrão  reduzir usando a regra 23 (localDeclarations)


Estado 103

   19 compoundStmt: OKEY localDeclarations statementList . CKEY
   25 statementList: statementList . statement

    KEYIF      deslocar, e ir ao estado 73
    KEYRETURN  deslocar, e ir ao estado 74
    KEYWHILE   deslocar, e ir ao estado 75
    KEYFOR     deslocar, e ir ao estado 76
    ID         deslocar, e ir ao estado 26
    NUM        deslocar, e ir ao estado 27
    SEMICOLON  deslocar, e ir ao estado 77
    OPARENT    deslocar, e ir ao estado 28
    OKEY       deslocar, e ir ao estado 59
    CKEY       deslocar, e ir ao estado 113

    compoundStmt        ir ao estado 81
    statement           ir ao estado 105
    expressionStmt      ir ao estado 85
    selectionStmt       ir ao estado 86
    iterationStmt       ir ao estado 87
    forStmt             ir ao estado 88
    returnStmt          ir ao estado 89
    expression          ir ao estado 90
    var                 ir ao estado 42
    simpleExpression    ir ao estado 43
    additiveExpression  ir ao estado 31
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34


Estado 104

   21 compoundStmt: OKEY statementList CKEY .

    $padrão  reduzir usando a regra 21 (compoundStmt)


Estado 105

   25 statementList: statementList statement .

    $padrão  reduzir usando a regra 25 (statementList)


Estado 106

   33 expressionStmt: expression SEMICOLON .

    $padrão  reduzir usando a regra 33 (expressionStmt)


Estado 107

   69 argList: argList COLON expression .

    $padrão  reduzir usando a regra 69 (argList)


Estado 108

   35 selectionStmt: KEYIF OPARENT expression . CPARENT statement
   36              | KEYIF OPARENT expression . CPARENT statement KEYELSE statement

    CPARENT  deslocar, e ir ao estado 114


Estado 109

   41 returnStmt: KEYRETURN expression SEMICOLON .

    $padrão  reduzir usando a regra 41 (returnStmt)


Estado 110

   37 iterationStmt: KEYWHILE OPARENT expression . CPARENT statement

    CPARENT  deslocar, e ir ao estado 115


Estado 111

   39 forStmt: KEYFOR OPARENT typeSpecifier . expression SEMICOLON expression SEMICOLON expression CPARENT statement

    ID       deslocar, e ir ao estado 26
    NUM      deslocar, e ir ao estado 27
    OPARENT  deslocar, e ir ao estado 28

    expression          ir ao estado 116
    var                 ir ao estado 42
    simpleExpression    ir ao estado 43
    additiveExpression  ir ao estado 31
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34


Estado 112

   38 forStmt: KEYFOR OPARENT expression . SEMICOLON expression SEMICOLON expression CPARENT statement

    SEMICOLON  deslocar, e ir ao estado 117


Estado 113

   19 compoundStmt: OKEY localDeclarations statementList CKEY .

    $padrão  reduzir usando a regra 19 (compoundStmt)


Estado 114

   35 selectionStmt: KEYIF OPARENT expression CPARENT . statement
   36              | KEYIF OPARENT expression CPARENT . statement KEYELSE statement

    KEYIF      deslocar, e ir ao estado 73
    KEYRETURN  deslocar, e ir ao estado 74
    KEYWHILE   deslocar, e ir ao estado 75
    KEYFOR     deslocar, e ir ao estado 76
    ID         deslocar, e ir ao estado 26
    NUM        deslocar, e ir ao estado 27
    SEMICOLON  deslocar, e ir ao estado 77
    OPARENT    deslocar, e ir ao estado 28
    OKEY       deslocar, e ir ao estado 59

    compoundStmt        ir ao estado 81
    statement           ir ao estado 118
    expressionStmt      ir ao estado 85
    selectionStmt       ir ao estado 86
    iterationStmt       ir ao estado 87
    forStmt             ir ao estado 88
    returnStmt          ir ao estado 89
    expression          ir ao estado 90
    var                 ir ao estado 42
    simpleExpression    ir ao estado 43
    additiveExpression  ir ao estado 31
    term                ir ao estado 32
    factor              ir ao estado 33
    call                ir ao estado 34


Estado 115

   37 iterationStmt: KEYWHILE OPARENT expression CPARENT . statement
